--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,45 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<ul>
-  <li><a routerLink="/" routerLinkActive="active">Home</a> </li>
-  <li><a routerLink="/login" routerLinkActive="active">Login</a> </li>
-  <li><a routerLink="/history" routerLinkActive="active">History</a> </li>
-  <li><a routerLink="/events" routerLinkActive="active">Events</a> </li>
+<div class="main">
 
-</ul>
-<router-outlet></router-outlet>
+  <div class="" style="font-family:Amiko, sans-serif;">
+    <nav class="navbar navbar-dark navbar-expand-md navigation-clean-search" style="background-color:#101010;">
+      <div class="container"><a class="navbar-brand" href="#" style="background-image:url(&quot;assets/img/Adidas_logo.svg&quot;);"></a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div
+          class="collapse navbar-collapse" id="navcol-1">
+          <ul class="nav navbar-nav">
+            <li class="nav-item" role="presentation">
+              <a class="nav-link" href="#">Profile</a>
+            </li>
+            <li class="nav-item" role="presentation">
+              <a class="nav-link" href="#">History</a>
+            </li>
+            <li class="nav-item" role="presentation">
+              <a class="nav-link" href="#">Accepted</a>
+            </li>
+            <li class="nav-item" role="presentation">
+              <a class="nav-link" href="#">Playgrounds</a>
+            </li>
+            <li class="nav-item" role="presentation">
+              <a class="nav-link" href="#">Events</a>
+            </li>
+          </ul>
+          <form class="form-inline mr-auto" target="_self">
+            <div class="form-group"><label for="search-field"><i class="fa fa-search"></i></label><input class="form-control search-field" type="search" name="search" id="search-field"></div>
+          </form><span class="navbar-text"></span><a class="btn btn-light profile-button notifications" role="button" href="#" style="font-size:25px;">!</a><a class="btn btn-light profile-button" role="button" href="#"></a></div>
+      </div>
+    </nav>
+    <div class="container hero">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="card-holder">
+            <div class="card">
+              <div class="card-body d-flex flex-column">
+                <router-outlet></router-outlet>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
