--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,12 @@
-<p>
-  home works!
-</p>
+<app-search-form></app-search-form>
+
+<div class="d-flex flex-row profile-info"><img src="assets/img/Generic_Placeholder_-_Profile.jpg" class="profile-pic">
+  <app-stats></app-stats>
+</div>
+<h4 class="card-title">Adam Smith</h4>
+<h6 class="text-muted card-subtitle mb-2">Sofia, Some Str. 45</h6>
+<p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+<div class="button-holder">
+  <button class="btn btn-danger swiper left" type="button">Decline</button>
+  <button class="btn btn-success swiper right" type="button">Challenge</button>
+</div>
