--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,14 @@
-<p>
-  login works!
-</p>
+<form >
+  <div class="alert alert-danger" *ngIf="!valid">Invalid email or password</div>
+  <div class="form-group">
+    <label for="">Email</label>
+    <input type="text" class="form-control" [(ngModel)]="email" name="email">
+  </div>
+  <div class="form-group">
+    <label for="">Password</label>
+    <input type="password" class="form-control" [(ngModel)]="password" name="password">
+  </div>
+  <div class="form-group">
+    <a class="btn btn-primary" href="javascript:void(0);" (click)="onLogin()">Login</a>
+  </div>
+</form>
