--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,8 @@
 <form >
   <div class="alert alert-danger" *ngIf="!valid">Invalid email or password</div>
   <div class="form-group">
-    <label for="">Email</label>
-    <input type="text" class="form-control" [(ngModel)]="email" name="email">
+    <label for="">Username</label>
+    <input type="text" class="form-control" [(ngModel)]="username" name="username">
   </div>
   <div class="form-group">
     <label for="">Password</label>
