--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 
   <div class="" style="font-family:Amiko, sans-serif;">
     <nav class="navbar navbar-dark navbar-expand-md navigation-clean-search" style="background-color:#101010;">
-      <div class="container"><a class="navbar-brand" href="#" style="background-image:url(assets/img/Adidas_logo.svg);"></a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+      <div class="container"><a class="navbar-brand" href="#"></a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
         <div
           class="collapse navbar-collapse" id="navcol-1">
           <ul class="nav navbar-nav">
