--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,6 +9,10 @@
     <input type="password" class="form-control" [(ngModel)]="password" name="password">
   </div>
   <div class="form-group">
-    <a class="btn btn-primary" href="javascript:void(0);" (click)="onLogin()">Login</a>
+    <a class="btn btn-primary btn-block" href="javascript:void(0);" (click)="onLogin()">Login</a>
+
+  </div>
+  <div class="form-group">
+    <a class="btn btn-primary btn-block" routerLink="/register">Register</a>
   </div>
 </form>
