--- a/src/app/search-form/search-form.component.html
+++ b/src/app/search-form/search-form.component.html
@@ -1,19 +1,20 @@
 <div class="search-info">
-  <input type="search">
   <div class="btn-group">
     <button class="btn btn-primary" type="button">Search by activity</button>
     <button
         class="btn btn-primary dropdown-toggle dropdown-toggle-split"
         data-toggle="dropdown"
         aria-expanded="false"
-        type="button">
+        type="button" (click)="onSearch()">
 
     </button>
     <div class="dropdown-menu" role="menu">
-      <a class="dropdown-item" role="presentation" href="#">Basketball<input type="checkbox" class="item-check"></a>
-      <a class="dropdown-item" role="presentation" href="#">Football<input type="checkbox" class="item-check"></a>
-      <a class="dropdown-item" role="presentation" href="#">Volleyball<input type="checkbox" class="item-check"></a>
-      <a class="dropdown-item" role="presentation" href="#">Tenis<input type="checkbox" id="tenis-check" class="item-check"></a>
-    </div>
+      <a class="dropdown-item" role="presentation" href="#" *ngFor="let sport of allSports"
+          (click)="toggleSport($event, sport)">
+          {{sport}}
+          <input type="checkbox" class="item-check"
+                 [checked]="selectedSports.indexOf(sport) !== -1">
+      </a>
+     </div>
   </div>
 </div>
