--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -30,7 +30,7 @@
         <div class="form-group" *ngFor="let sport of sports| slice:sports.length / 2 + 1">
           <div class="form-check" (click)="toggleSport(sport)">
             <input class="form-check-input" type="checkbox" [checked]="user.sports.indexOf(sport) > -1">
-            <label class="form-check-label" for="">{{sport}}</label></div>
+            <label class="form-check-label" for="">{{sport.name}}</label></div>
         </div>
       </div>
     </div>
