--- a/src/app/notifications/notifications.component.html
+++ b/src/app/notifications/notifications.component.html
@@ -1,4 +1,4 @@
-<h4>Chalnges</h4>
+<h4>Challenges</h4>
 <ul class="list-group">
   <li class="list-group-item" *ngFor="let n of items">
     {{n.from}} - {{n.sport}}
